Enhance blog layout and functionality with cover images, visit count, and Giscus integration

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -17,6 +17,22 @@
     <div class="content">
       {{ .Content }}
     </div>
+    <script src="https://giscus.app/client.js"
+      data-repo="Alexander-499/portfolio"
+      data-repo-id="R_kgDOQvYAGQ"
+      data-category="Blog"
+      data-category-id="DIC_kwDOQvYAGc4C0RIs"
+      data-mapping="pathname"
+      data-strict="0"
+      data-reactions-enabled="1"
+      data-emit-metadata="1"
+      data-input-position="top"
+      data-theme="dark"
+      data-lang="en"
+      data-loading="lazy"
+      crossorigin="anonymous"
+      async
+    ></script>
   </article>
 </section>
 {{ end }}
