--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -25,7 +25,9 @@
 <link rel="stylesheet" href="/styles/shortcodes.css">
 
 <script src="https://open.spotify.com/embed/iframe-api/v1"></script>
+<script data-goatcounter="https://alexander499.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 <script defer src="https://unpkg.com/lucide@latest"></script>
+
 <script defer src="/scripts/lang.js"></script>
 <script defer src="/scripts/general.js"></script>
 {{ if .IsHome }}<script defer src="/scripts/home.js"></script>{{ end }}
