--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -16,7 +16,7 @@
             </time>
           </div>
           {{ with .Params.image }}
-            <div><img src="{{ . }}"></div>
+            <div class="cover-image"><img src="{{ . }}"></div>
           {{ end }}
           <div class="content">
             <h2>{{ .Title }}</h2>
