--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,9 @@
 <footer id="footer">
   <div>
     <div class="left">
-      &copy; 2025 Alexander499 - ❤️‍🔥 <a href>Alexander499</a>
+      &copy; 2025 Alexander499 -
+      ❤️‍🔥 <a href="/">Alexander499</a>
+      - Visits:  <span id="visitCount">&ndash;</span>
     </div>
     <div class="right">
       <ul>
